# lurker

./: .gitignore  README.md  findings.md  progress.md  pyproject.toml  task_plan.md  大趋势投资雷达系统需求文档.md
configs/: markets.yaml  push.yaml.example  scoring.yaml  strategies.yaml  themes.yaml  watchlist.yaml
docs/: design_discussions.md  fundamental_checkup.md  professional_flow_radar.md
docs/superpowers/plans/: 2026-05-17-trend-radar-mvp.md  2026-06-04-a-share-professional-flow-radar.md
docs/superpowers/specs/: 2026-05-17-trend-radar-design.md  2026-06-04-a-share-professional-flow-radar-design.md  2026-06-04-weekly-monthly-macro-flow-radar-design.md
src/lurker/: cli.py  config.py  pipeline.py
src/lurker/ai/: attribution.py  attributor.py  prompts.py  schemas.py
src/lurker/application/: __init__.py  flow_snapshot.py  price_snapshot.py  professional_flow_daily.py  rank_candidates.py  run_daily.py  sector_scan.py  signal_scan.py  strategy_runner.py  weekly_flow_report.py
src/lurker/domain/: __init__.py  attribution.py  models.py  policies.py  signals.py
src/lurker/ingest/: constituents.py  flows.py  news.py  (+1 more)
tests/: test_ai_schema.py  test_cli.py  test_config.py  test_domain_architecture.py  test_flow_snapshot.py  test_flows.py  test_gemini_attributor.py  test_ingest.py  test_notification_email.py  test_pipeline.py  test_price_snapshot.py  test_professional_flow_daily.py  test_reports.py  test_resolved_seed_pool.py  test_run_daily.py  test_scoring.py  test_signals.py  test_storage.py  test_strategy_runner.py  test_universe.py  test_weekly_flow_report.py
(+17 files in other folders)
