[project]
name = "lurker"
version = "0.1.0"
description = "Local trend discovery radar for self-use investment research"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.14.0",
  "baostock>=0.8.9",
  "markdown-it-py>=3.0.0",
  "openai>=1.30.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.0",
  "tushare>=1.4.0",
  "yfinance>=0.2.40"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[project.scripts]
lurker = "lurker.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
